[gd_scene load_steps=32 format=3 uid="uid://ng11y8qglaua"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_orpm5"]
[ext_resource type="Shader" path="res://shaders/sway.gdshader" id="2_26bkm"]
[ext_resource type="Texture2D" uid="uid://dv0c78qeq1kv1" path="res://assets/gamesprites/background/summer_sky.png" id="2_0558r"]
[ext_resource type="Script" path="res://scripts/destroy_at_runtime.gd" id="2_hb0eh"]
[ext_resource type="Texture2D" uid="uid://xys5c8adk4eb" path="res://assets/gamesprites/background/summer_grass.png" id="3_ivpr7"]
[ext_resource type="Texture2D" uid="uid://be1may06aqfs2" path="res://assets/gamesprites/background/summer_sky_cloud.png" id="3_s03cx"]
[ext_resource type="Texture2D" uid="uid://ct1vj8ehq3y13" path="res://assets/ui/logo/egothystical_logo.png" id="6_rpxjj"]
[ext_resource type="Texture2D" uid="uid://b6wcvplbjwp38" path="res://assets/ui/logo/cornucobia_logo.png" id="8_7d7lc"]
[ext_resource type="PackedScene" uid="uid://dqmx8d6kghpgq" path="res://scenes/modular_touch_button.tscn" id="9_g7jex"]
[ext_resource type="Shader" path="res://shaders/change2color.gdshader" id="10_2b4u4"]
[ext_resource type="FontFile" uid="uid://mop3gahfptvb" path="res://fonts/monogram-extended.ttf" id="11_m4xg1"]
[ext_resource type="Theme" uid="uid://dxv3iupkms0px" path="res://resources/monogram_window_theme.tres" id="12_ugkw6"]
[ext_resource type="PackedScene" uid="uid://cidr0kvm2nivg" path="res://scenes/inside_quit.tscn" id="13_dw23w"]
[ext_resource type="PackedScene" uid="uid://ivn41o6xbjun" path="res://scenes/inside_credits.tscn" id="14_8xqe4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4uly"]
shader = ExtResource("2_26bkm")
shader_parameter/speed = 3.74
shader_parameter/minStrength = 0.05
shader_parameter/maxStrength = 0.01
shader_parameter/strengthScale = 100.0
shader_parameter/interval = 6.435
shader_parameter/detail = 1.5
shader_parameter/distortion = null
shader_parameter/heightOffset = 0.0
shader_parameter/offset = 0.0

[sub_resource type="Gradient" id="Gradient_482et"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.215686, 0.431373, 0.584314, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j18aw"]
gradient = SubResource("Gradient_482et")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bi17m"]
shader = ExtResource("10_2b4u4")
shader_parameter/u_color_key1 = Color(1, 1, 1, 1)
shader_parameter/u_replacement_color1 = Color(0.862745, 0.729412, 0.627451, 1)
shader_parameter/u_color_key2 = Color(0.764706, 0.764706, 0.764706, 1)
shader_parameter/u_replacement_color2 = Color(0.737129, 0.571653, 0.439615, 1)
shader_parameter/u_tolerance = 0.1
shader_parameter/u_interpolation_factor = 1.0

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_08wxu"]

[sub_resource type="MeshTexture" id="MeshTexture_pn4mi"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="MeshTexture" id="MeshTexture_tx3da"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q12a7"]
shader = ExtResource("10_2b4u4")
shader_parameter/u_color_key1 = Color(1, 1, 1, 1)
shader_parameter/u_replacement_color1 = Color(0.862745, 0.729412, 0.627451, 1)
shader_parameter/u_color_key2 = Color(0.764706, 0.764706, 0.764706, 1)
shader_parameter/u_replacement_color2 = Color(0.737129, 0.571653, 0.439615, 1)
shader_parameter/u_tolerance = 0.1
shader_parameter/u_interpolation_factor = 1.0

[sub_resource type="MeshTexture" id="MeshTexture_38rrg"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="MeshTexture" id="MeshTexture_5tk8c"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jjg7i"]
shader = ExtResource("10_2b4u4")
shader_parameter/u_color_key1 = Color(1, 1, 1, 1)
shader_parameter/u_replacement_color1 = Color(0.862745, 0.729412, 0.627451, 1)
shader_parameter/u_color_key2 = Color(0.764706, 0.764706, 0.764706, 1)
shader_parameter/u_replacement_color2 = Color(0.737129, 0.571653, 0.439615, 1)
shader_parameter/u_tolerance = 0.1
shader_parameter/u_interpolation_factor = 1.0

[sub_resource type="MeshTexture" id="MeshTexture_lx2ap"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="MeshTexture" id="MeshTexture_6r4hu"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5c4jo"]
shader = ExtResource("10_2b4u4")
shader_parameter/u_color_key1 = Color(1, 1, 1, 1)
shader_parameter/u_replacement_color1 = Color(0.862745, 0.729412, 0.627451, 1)
shader_parameter/u_color_key2 = Color(0.764706, 0.764706, 0.764706, 1)
shader_parameter/u_replacement_color2 = Color(0.737129, 0.571653, 0.439615, 1)
shader_parameter/u_tolerance = 0.1
shader_parameter/u_interpolation_factor = 1.0

[sub_resource type="MeshTexture" id="MeshTexture_3aoik"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="MeshTexture" id="MeshTexture_krism"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="LabelSettings" id="LabelSettings_f4mnd"]
font = ExtResource("11_m4xg1")
font_size = 60

[node name="MainMenu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_orpm5")
maingameplay_scene_path = "res://scenes/main_gameplay_scene.tscn"
maingameplay_song_path = "res://assets/musics/Upbeat Forever.mp3"

[node name="NotchReminder" type="CanvasLayer" parent="."]
script = ExtResource("2_hb0eh")

[node name="NotchRect" type="ReferenceRect" parent="NotchReminder"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 104.0
grow_horizontal = 2
border_width = 2.0
metadata/_edit_lock_ = true

[node name="BGStuff" type="Node2D" parent="."]

[node name="BlueSkyParallax" type="Parallax2D" parent="BGStuff"]
unique_name_in_owner = true
repeat_size = Vector2(4320, 0)
autoscroll = Vector2(-18, 0)

[node name="BlueSky" type="Sprite2D" parent="BGStuff/BlueSkyParallax"]
scale = Vector2(7.5, 7.5)
texture = ExtResource("2_0558r")
centered = false

[node name="CloudParallax" type="Parallax2D" parent="BGStuff"]
unique_name_in_owner = true
repeat_size = Vector2(4320, 0)
autoscroll = Vector2(-24, 0)

[node name="Cloud" type="Sprite2D" parent="BGStuff/CloudParallax"]
scale = Vector2(7.5, 7.5)
texture = ExtResource("3_s03cx")
centered = false

[node name="GrassParallax" type="Parallax2D" parent="BGStuff"]
unique_name_in_owner = true
repeat_size = Vector2(4320, 0)
autoscroll = Vector2(-15, 0)

[node name="Grass" type="Sprite2D" parent="BGStuff/GrassParallax"]
material = SubResource("ShaderMaterial_l4uly")
scale = Vector2(7.5, 7.5)
texture = ExtResource("3_ivpr7")
centered = false

[node name="SkyBlueOnly" type="Sprite2D" parent="BGStuff"]
unique_name_in_owner = true
position = Vector2(0, -2400)
scale = Vector2(17.047, 37.636)
texture = SubResource("GradientTexture2D_j18aw")
centered = false

[node name="EgothysticalLogo" type="Sprite2D" parent="BGStuff"]
unique_name_in_owner = true
position = Vector2(545.504, -687)
texture = ExtResource("6_rpxjj")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -1800)
anchor_mode = 0

[node name="TransitionTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="CornucobiaLogo" type="Sprite2D" parent="."]
position = Vector2(545, 630)
scale = Vector2(3.82, 3.82)
texture = ExtResource("8_7d7lc")

[node name="BtnPlay" parent="." instance=ExtResource("9_g7jex")]
material = SubResource("ShaderMaterial_bi17m")
position = Vector2(335.504, 1079)
scale = Vector2(7, 7)
texture_normal = SubResource("MeshTexture_pn4mi")
texture_pressed = SubResource("MeshTexture_tx3da")
button_text = "Play"
button_size = Vector2(60, 30)

[node name="BtnOptions" parent="." instance=ExtResource("9_g7jex")]
material = SubResource("ShaderMaterial_q12a7")
position = Vector2(335.504, 1349)
scale = Vector2(7, 7)
texture_normal = SubResource("MeshTexture_38rrg")
texture_pressed = SubResource("MeshTexture_5tk8c")
button_text = "Options"

[node name="BtnCredits" parent="." instance=ExtResource("9_g7jex")]
material = SubResource("ShaderMaterial_jjg7i")
position = Vector2(335.504, 1517)
scale = Vector2(7, 7)
texture_normal = SubResource("MeshTexture_lx2ap")
texture_pressed = SubResource("MeshTexture_6r4hu")
button_text = "Credits"

[node name="BtnQuit" parent="." instance=ExtResource("9_g7jex")]
material = SubResource("ShaderMaterial_5c4jo")
position = Vector2(335.504, 1682)
scale = Vector2(7, 7)
texture_normal = SubResource("MeshTexture_3aoik")
texture_pressed = SubResource("MeshTexture_krism")
button_text = "Quit"

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_left = 339.0
offset_top = 1621.0
offset_right = 800.0
offset_bottom = 1682.0

[node name="SkyBlueOnlyCover" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -2400)
scale = Vector2(17.047, 37.636)
texture = SubResource("GradientTexture2D_j18aw")
centered = false

[node name="SkipLabel" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="SkipLabel"]
offset_left = 309.004
offset_top = -33.0
offset_right = 782.004
offset_bottom = 15.0
text = "Double tap to skip..."
label_settings = SubResource("LabelSettings_f4mnd")

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
disable_3d = true
title = ""
initial_position = 1
size = Vector2i(995, 345)
max_size = Vector2i(995, 800)
theme = ExtResource("12_ugkw6")
ok_button_text = "Yes"
cancel_button_text = "No"

[node name="InsideQuit" parent="QuitDialog" instance=ExtResource("13_dw23w")]
unique_name_in_owner = true
offset_left = -473.5
offset_top = -148.5
offset_right = 473.5
offset_bottom = 27.5

[node name="CreditDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1
disable_3d = true
title = ""
initial_position = 1
size = Vector2i(995, 1150)
visible = true
max_size = Vector2i(995, 1150)
theme = ExtResource("12_ugkw6")
ok_button_text = "Ok"

[node name="InsideCredit" parent="CreditDialog" instance=ExtResource("14_8xqe4")]
offset_left = -473.5
offset_top = -551.0
offset_right = 473.5
offset_bottom = 430.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
unique_name_in_owner = true
visible = false
color = Color(0.62, 0.62, 0.62, 1)

[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
[connection signal="precise_released" from="BtnPlay" to="." method="_on_btn_play_precise_released"]
[connection signal="precise_released" from="BtnCredits" to="." method="_on_btn_credits_precise_released"]
[connection signal="precise_released" from="BtnQuit" to="." method="_on_btn_quit_precise_released"]
[connection signal="canceled" from="QuitDialog" to="." method="_on_quit_dialog_canceled"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_quit_dialog_confirmed"]
[connection signal="confirmed" from="CreditDialog" to="." method="_on_credit_dialog_confirmed"]
